# C214-Seminario

./: .gitignore  CMakeList.txt  CMakeListis.txt  CMakeLists.txt  Gtest.sln  Gtest.vcxproj  character.cpp  character.h  item.cpp  item.h  test.cpp
.github/workflows/: cmake-multi-platform.yml
Debug/: Gtest.ilk
Gtest/Debug/Gtest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  Gtest.lastbuildstate
Gtest/x64/Debug/Gtest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  Gtest.lastbuildstate
